OFC-1233 - Sample design / Species checklists importers does not fit correctly the available space

--- a/collect-web/src/main/webapp/assets/designer_style.css
+++ b/collect-web/src/main/webapp/assets/designer_style.css
@@ -126,3 +126,8 @@ button.icon {
 	padding: 1px;
 }
 /* END OF LANGUAGES LIST STYLE */
+
+.z-flash.maximised {
+	height: 100%;
+	width: 100%;
+}
